Corrected the text wrapping issue

--- a/Resources/screens/stylefeed/less/custom.less
+++ b/Resources/screens/stylefeed/less/custom.less
@@ -95,6 +95,9 @@ a {
 	}
 	.shop-item-title {
 		font-weight: bold;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
 	}
 	.shop-item-meta {
 		opacity: 0.7;
